--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <button id="reset-button"> Borrar Texto </button>
 
   <footer>
-    <p> Autor: <strong>Yorlenis Guerra</strong></p>
+    <p>Por: <strong>Yorlenis Guerra</strong></p>
   </footer>
 
   <script src="index.js" type="module"></script>
